<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".Signup.Controller.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#008577"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_te_ID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/ID"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_te_PW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/PW"
            android:importantForAutofill="no"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="2">
            <Button
                android:id="@+id/btn_login_ok"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:layout_marginEnd="10dp"
                android:text="@string/login_OKButton" />
            <Button
                android:id="@+id/btn_goto_signup"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:layout_marginStart="10dp"
                android:text="@string/signup" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ffd400"
            android:hint="카카오 로그인 연동부분. 수정예정"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#00498c"
            android:hint="페이스북 로그인 연동부분. 수정예정"
            android:textColorHint="#ffffff"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="bottom"
        android:background="#008577" />

</LinearLayout>