<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup.Controller.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/signup"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9f9f9f"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="이름"
            android:textColor="#000000"/>
        <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_te_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_usrName_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"/>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="아이디(이메일)"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_ti_ID"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/signup_te_ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ID_hint"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_IDcheck"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_green"
                android:text="@string/signup_IDcheck"
                android:textSize="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="비밀번호"
            android:textColor="#000000"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_ti_PW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_te_PW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PW_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="비밀번호 확인"
            android:textColor="#000000"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_ti_PW_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_te_PW_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_PWcheck_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="생년월일"
            android:textColor="#000000"/>
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_te_DOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_DOB_hint"
                    android:importantForAutofill="no"
                    android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_signup_OK"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/signup_OKButton" />
            <Button
                android:id="@+id/btn_signup_cancle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/signup_cancleButton" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#008577"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>