<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#008577"
    tools:context=".Login.Controller.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_te_ID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/ID"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_te_PW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/PW"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login_ok"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_button_write"
                android:text="@string/login_OKButton"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btn_goto_signup"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button_write"
                android:text="@string/signup"
                android:textColor="#ffffff" />
        </LinearLayout>

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/btn_kakao_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>