<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/edit_password"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9f9f9f"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="30">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="현 비밀번호"
            android:textColor="#000000" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_last_ti_PW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password_last_te_PW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PW_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="새 비밀번호"
            android:textColor="#000000" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_ti_PW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password_te_PW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PW_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="새 비밀번호 확인"
            android:textColor="#000000" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_password_ti_PW_check"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password_te_PW_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_PWcheck_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit_password_OK"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/edit_password_OKButton" />

            <Button
                android:id="@+id/btn_edit_password_cancle"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/edit_password_cancleButton" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#008577"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>