<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="명소 정보 수정(임시)"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9f9f9f"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/attraction_edit_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="명소 이름"
        android:textColor="#000000"
        android:textSize="30dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_noimage"
        android:scaleType="fitXY"
        />
    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#3f3f3f" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/attraction_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="수정할 명소 설명"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_attraction_edit_OK"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/edit_attraction_OKButton" />
        <Button
            android:id="@+id/btn_signup_cancle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/edit_attraction_cancleButton" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#008577"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>